# resources_manager

./: CMakeLists.txt  common.hpp
executable/: CMakeLists.txt  main.cpp
